--- a/public/css/css.css
+++ b/public/css/css.css
@@ -1,24 +1,3 @@
-// Body
-$body-bg: #f8fafc;
-
-// Typography
-$font-family-sans-serif: 'Nunito', sans-serif;
-$font-size-base: 0.9rem;
-$line-height-base: 1.6;
-
-// Colors
-$blue: #3490dc;
-$indigo: #6574cd;
-$purple: #9561e2;
-$pink: #f66d9b;
-$red: #e3342f;
-$orange: #f6993f;
-$yellow: #ffed4a;
-$green: #38c172;
-$teal: #4dc0b5;
-$cyan: #6cb2eb;
-
-
 html, body {
     background-color: #fff;
     color: #636b6f;
@@ -38,6 +17,12 @@ html, body {
     justify-content: center;
 }
 
+.flex-left {
+    align-items: left;
+    display: flex;
+    justify-content: left;
+}
+
 .position-ref {
     position: relative;
 }
@@ -53,8 +38,9 @@ html, body {
 }
 
 .title {
-    font-size: 84px;
+    font-size: 72px;
 }
+
 
 .links > a {
     color: #636b6f;
@@ -68,4 +54,8 @@ html, body {
 
 .m-b-md {
     margin-bottom: 30px;
+}
+
+.btn-h1-spacing {
+    margin-top: 18px;
 }
